<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.sharedbox</groupId>
  <artifactId>sharedbox-common</artifactId>
  <version>2.0.0</version>
  <name>sharedbox-common</name>
  <description>sharedbox-common</description>
  <packaging>jar</packaging>
  
  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!-- Apache -->
    <apache.poi.version>5.2.2</apache.poi.version>
    <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
    <apache.commons.io.version>2.11.0</apache.commons.io.version>
    <apache.commons.text.version>1.9</apache.commons.text.version>
    <apache.commons-validator.version>1.7</apache.commons-validator.version>
    <apache.httpclient.version>4.5.13</apache.httpclient.version>
    <apache.log4j.version>2.14.1</apache.log4j.version>
    <apache.maven.version>3.8.6</apache.maven.version>
    <!-- Auth0 -->
    <auth0.jwt.version>4.0.0</auth0.jwt.version>
    <!-- Faster Xml -->
    <fasterxml.jackson.version>2.14.1</fasterxml.jackson.version>
    <!-- Google -->
    <google.gson.version>2.9.0</google.gson.version>
    <google.zxing.version>3.5.0</google.zxing.version>
    <!-- Javax -->
    <javax.servlet.api.version>4.0.1</javax.servlet.api.version>
    <javax.servlet.jsp.api.version>2.3.3</javax.servlet.jsp.api.version>
    <javax.servlet.jsp.jstl.api.version>1.2.2</javax.servlet.jsp.jstl.api.version>
    <javax.servlet.xml.soap.api>1.4.0</javax.servlet.xml.soap.api>
    <!-- Spring -->
    <spring.framework.version>5.3.24</spring.framework.version>
  </properties>
  
  <organization>
    <name>SharedBox</name>
    <url>http://www.sharedbox.com.br</url>
  </organization>
  
  <developers>
    <developer>
      <id>rafael.costi</id>
      <name>Rafael Costi Roque</name>
      <email>rafaelcosti@outlook.com</email>
      <roles>
        <role>Owner</role>
        <role>Committer</role>
      </roles>
    </developer>
  </developers>  
  
  <scm>
    <url>https://github.com/sharedbox/sharedbox-common/</url>
    <connection>scm:git:https://github.com/sharedbox/sharedbox-common.git</connection>
    <developerConnection>scm:git:git@github.com/sharedbox/sharedbox-common.git</developerConnection>
  </scm>
  
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  
  <dependencies>
    <!-- Apache -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${apache.commons.lang3.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>${apache.poi.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${apache.poi.version}</version>
    </dependency>
    
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${apache.commons.io.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>${apache.commons.text.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${apache.httpclient.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-model</artifactId>
      <version>${apache.maven.version}</version>
    </dependency>
    
    <dependency>
      <groupId>commons-validator</groupId>
      <artifactId>commons-validator</artifactId>
      <version>${apache.commons-validator.version}</version>
    </dependency>
    
    <!-- Auth0 -->
    <dependency>
      <groupId>com.auth0</groupId>
      <artifactId>java-jwt</artifactId>
      <version>${auth0.jwt.version}</version>
    </dependency>
    
    <!-- Fasterxml Jackson -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${fasterxml.jackson.version}</version>
    </dependency>
    
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${fasterxml.jackson.version}</version>
    </dependency>
    
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>${fasterxml.jackson.version}</version>
    </dependency>
    
    <!-- Google -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${google.gson.version}</version>
    </dependency>
    
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>core</artifactId>
      <version>${google.zxing.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>javase</artifactId>
      <version>${google.zxing.version}</version>
    </dependency>

    <!-- Javax -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>${javax.servlet.api.version}</version>
    </dependency>
    
    <dependency>
      <groupId>javax.servlet.jsp</groupId>
      <artifactId>javax.servlet.jsp-api</artifactId>
      <version>${javax.servlet.jsp.api.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>javax.servlet.jsp.jstl</groupId>
      <artifactId>javax.servlet.jsp.jstl-api</artifactId>
      <version>${javax.servlet.jsp.jstl.api.version}</version>
    </dependency>
    
    <dependency>
      <groupId>javax.xml.soap</groupId>
      <artifactId>javax.xml.soap-api</artifactId>
      <version>${javax.servlet.xml.soap.api}</version>
    </dependency>
    
    <!-- Json -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20210307</version>
    </dependency>
    
    <!-- JSoup -->
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>1.15.3</version>
    </dependency>
    
    <!-- Junit -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.9.0</version>
      <scope>test</scope>
    </dependency>
    
    <!-- Mockito -->
    <dependency>
    <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
    
    <!-- Spring -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.framework.version}</version>
    </dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.time=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.8</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>post-unit-test</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>target/jacoco.exec</dataFile>
              <outputDirectory>target/jacoco-ut</outputDirectory>
            </configuration>
          </execution>
          <execution>
            <id>default-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>COMPLEXITY</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>100</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>